    - Changed the amount of polonium you can get from lead-solder, from 0-2, to 0-2 with a 25% chance. I still want to see people attempt to power their base with it.
    - Changed any plates that come after P-TM science, to take 6.4s instead of the usual 3.2s.
    - Changed palladium catalysts to use plates, not ore.
    - Lowered the cost of worker robots speed 5 technology from 500 to 450.
    - Changed the amount of electric engines needed for assembler 3's from 5 to 3.
    - Changed yellow inserters to take gears, changed blue inserters to take yellow inserters.
    - Added productivity to lithium hydroxide and oversaturated lithium leeching.
    - Revamped battery charging by lowering the stack size of batteries, adding a chance for it to not give a charged battery out and a way to fix said batteries.
    - Moved empty bio-modules and actual bio-modules into their own subgroup.
    - Changed all slugs stack size to 100, and geneva neglection's to 150.
    - Changed slugs range deviation to be less on higher tiers, to make them more precise to use weapons and lowered the max amount of deviation on the 'worst' type of slug.
    - Changed TWAT's stack size to 50 instead of 20.
    - Made vacuum tubes slightly cheaper, by lowering the amount of resources compared to their original recipe.
    - Changed the first plastic science technology to also take R-NM packs.
    - Deleted oscilliscopes and merged them into RCU's, since there was no use for them being their own thing.
    - Changed RCU's to take 35 seconds, instead of 30 seconds.
    - Changed catalysts to actually act like catalysts - they now have a chance to spit themselves out, and catalyst containers. The monkey's finger curls.
    - Slightly lowered the amount of ferrum that is produced by most elements.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.